<resources>
    <string name="addSessionDes">Добавь смену или выбире если это продолжение смены</string>
    <string name="add_session">Добавь смену</string>
    <string name="app_name">Булочная</string>
    <string name="title_user">Сотрудники</string>
    <string name="select_user">Выбери себя</string>
    <string name="done">Готово</string>
    <string name="titleBtAdd">+</string>
    <string name="titleGroup">Группа продуктов</string>
</resources>
