<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/twUser"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/select_user"
        android:textSize="24sp"
        android:clickable="true"
        android:focusable="true"/>

    <TextView
        android:id="@+id/twSession"
        android:layout_below="@id/twUser"
        android:layout_marginTop="10dp"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:text="@string/add_session"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/btAddSession"
        android:layout_below="@id/twUser"
        android:layout_alignRight="@id/twSession"
        android:layout_alignEnd="@id/twSession"
        android:layout_marginRight="-50dp"
        android:layout_marginEnd="-50dp"
        android:layout_marginTop="10dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/addSessionDes"
        android:text="@string/titleBtAdd"/>

    <Button
        android:id="@+id/btDone"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"/>
</RelativeLayout>